syntax = "proto3";

message ChatMessage {
	string message = 1;
}
